# checkers

./: .gitignore  CMakeLists.txt  README.md  agentarthur.cpp  agentkevin.cpp  checkerboard.cpp  checkerboard.h  emergency.py  main.cpp
Control/: game_server.py  test_urx.py  urx_control.py  wsg50.py  wsg50_control.py
Game/: README.md  agentarthur.cpp  agentarthur.h  agentkevin.cpp  agentkevin.h  agentplayer.cpp  agentplayer.h  agentvision.cpp  agentvision.h  agentwalter.cpp  agentwalter.h  checkerboard.cpp  checkerboard.h  checkersagent.h  main.cpp  tcphelper.cpp  tcphelper.h
Vision/: CMakeLists.txt  main.cpp  reference.txt  tcphelper.cpp  tcphelper.h  test_socket.py  vision.cpp  vision.h
